[gd_scene load_steps=20 format=3 uid="uid://pu6gx570i247"]

[ext_resource type="Script" path="res://Scene_Switcher/enemy/jeep.gd" id="1_c2b0c"]
[ext_resource type="PackedScene" uid="uid://bow40sr71gndy" path="res://Scene_Switcher/ammo/bullet.tscn" id="2_t8rcc"]
[ext_resource type="Texture2D" uid="uid://dto7re0ap5r77" path="res://Scene_Switcher/enemy/asset/jeep.png" id="3_01osj"]
[ext_resource type="Texture2D" uid="uid://bgo5bfv0pyby4" path="res://Scene_Switcher/enemy/asset/vortex.png" id="3_8iuek"]
[ext_resource type="Texture2D" uid="uid://c8ewet4jbvajt" path="res://Scene_Switcher/enemy/asset/jeep_shadow.png" id="4_tuv1f"]
[ext_resource type="Texture2D" uid="uid://b4sjiiaxk2dyw" path="res://Scene_Switcher/enemy/asset/jeep_weapon.png" id="5_5rwoi"]
[ext_resource type="Texture2D" uid="uid://cqmhyk0f6tb6p" path="res://Scene_Switcher/ammo/asset/fire_sparkles.png" id="5_lewg6"]
[ext_resource type="Texture2D" uid="uid://btq34b7d86mib" path="res://Scene_Switcher/enemy/asset/jeep_weapon_shadow.png" id="6_dswit"]
[ext_resource type="Texture2D" uid="uid://ch431n67ojgmo" path="res://Scene_Switcher/enemy/asset/target_follow.png" id="7_2atxw"]
[ext_resource type="PackedScene" uid="uid://b5j1ql6oqb6os" path="res://Scene_Switcher/enemy/enemy_explosion.tscn" id="7_hr0f3"]
[ext_resource type="Animation" uid="uid://biigdmqba1ogp" path="res://Scene_Switcher/ammo/animation/fire_basis.tres" id="7_mxjk1"]
[ext_resource type="PackedScene" uid="uid://ch4qvgnjamob2" path="res://Scene_Switcher/enemy/fire_weapon.tscn" id="8_lyv8w"]
[ext_resource type="AudioStream" uid="uid://nd1b73dpuuhq" path="res://Scene_Switcher/sound/explosion.mp3" id="13_x6e81"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jy5v2"]
size = Vector2(48, 112)

[sub_resource type="Gradient" id="Gradient_706j5"]
offsets = PackedFloat32Array(0, 0.705521, 1)
colors = PackedColorArray(0.219501, 0.219501, 0.219501, 1, 0.490196, 0.490196, 0.490196, 1, 1, 1, 1, 0)

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lie06"]
_data = {
"fire_basis": ExtResource("7_mxjk1")
}

[sub_resource type="Animation" id="Animation_814xp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("target_follow:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.984314, 0.309804, 0, 1)]
}

[sub_resource type="Animation" id="Animation_63epd"]
resource_name = "target_on_player"
length = 0.2
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("target_follow:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0.984314, 0.309804, 0, 1), Color(0.984314, 0.309804, 0, 0.12549), Color(0.984314, 0.309804, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_s6waw"]
_data = {
"RESET": SubResource("Animation_814xp"),
"target_on_player": SubResource("Animation_63epd")
}

[node name="jeep" type="CharacterBody2D"]
z_index = 1
collision_layer = 4
collision_mask = 13
script = ExtResource("1_c2b0c")
ammo_scene = ExtResource("2_t8rcc")

[node name="body_sprite" type="Sprite2D" parent="."]
modulate = Color(0.37664, 0.394782, 0.288569, 1)
scale = Vector2(0.248216, 0.248216)
texture = ExtResource("3_01osj")

[node name="shadow" type="Sprite2D" parent="body_sprite"]
modulate = Color(1, 1, 1, 0.580392)
z_index = -1
position = Vector2(-10, 10)
scale = Vector2(1.01, 1.01)
texture = ExtResource("4_tuv1f")

[node name="weapon" type="Sprite2D" parent="body_sprite"]
z_index = 1
position = Vector2(0, -48.345)
texture = ExtResource("5_5rwoi")

[node name="shadow" type="Sprite2D" parent="body_sprite/weapon"]
modulate = Color(1, 1, 1, 0.580392)
z_index = -1
position = Vector2(-5, 5)
texture = ExtResource("6_dswit")

[node name="move_smoke" type="Node2D" parent="body_sprite"]
scale = Vector2(3.22581, 3.22581)

[node name="smoke_r" parent="body_sprite/move_smoke" instance=ExtResource("7_hr0f3")]
z_index = 1
position = Vector2(-22.4804, -67.4413)
emitting = true
amount = 5
one_shot = false
explosiveness = 0.0
emission_sphere_radius = 8.0
initial_velocity_min = 2.0
initial_velocity_max = 5.0
color = Color(1, 1, 1, 0.25098)

[node name="smoke_l" parent="body_sprite/move_smoke" instance=ExtResource("7_hr0f3")]
z_index = 1
position = Vector2(24.5196, -67.4413)
emitting = true
amount = 5
one_shot = false
explosiveness = 0.0
emission_sphere_radius = 8.0
initial_velocity_min = 2.0
initial_velocity_max = 5.0
color = Color(1, 1, 1, 0.25098)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("RectangleShape2D_jy5v2")

[node name="target" type="Marker2D" parent="."]
position = Vector2(0, 72)

[node name="left_wall" type="RayCast2D" parent="."]
target_position = Vector2(-40, 0)
collision_mask = 20

[node name="right_wall" type="RayCast2D" parent="."]
target_position = Vector2(40, 0)
collision_mask = 20

[node name="right_shoot" type="RayCast2D" parent="."]
position = Vector2(-16, 64)
target_position = Vector2(0, 600)

[node name="left_shoot" type="RayCast2D" parent="."]
position = Vector2(16, 64)
target_position = Vector2(0, 600)

[node name="Explosion" parent="." instance=ExtResource("7_hr0f3")]
z_index = 3

[node name="Smokes" type="Node2D" parent="."]
z_index = 1

[node name="Smoke20" type="CPUParticles2D" parent="Smokes"]
position = Vector2(0, -56)
emitting = false
amount = 100
lifetime = 3.0
texture = ExtResource("3_8iuek")
emission_shape = 1
emission_sphere_radius = 8.0
spread = 180.0
gravity = Vector2(2.08165e-12, -5)
linear_accel_min = 5.0
linear_accel_max = 10.0
radial_accel_min = 1.0
radial_accel_max = 1.0
color_ramp = SubResource("Gradient_706j5")

[node name="Smoke40" type="CPUParticles2D" parent="Smokes"]
position = Vector2(-16, -16)
emitting = false
amount = 100
lifetime = 3.0
texture = ExtResource("3_8iuek")
emission_shape = 1
emission_sphere_radius = 8.0
spread = 180.0
gravity = Vector2(2.08165e-12, -5)
linear_accel_min = 5.0
linear_accel_max = 10.0
radial_accel_min = 1.0
radial_accel_max = 1.0
color_ramp = SubResource("Gradient_706j5")

[node name="Smoke60" type="CPUParticles2D" parent="Smokes"]
position = Vector2(16, 0)
emitting = false
amount = 100
lifetime = 3.0
texture = ExtResource("3_8iuek")
emission_shape = 1
emission_sphere_radius = 8.0
spread = 180.0
gravity = Vector2(2.08165e-12, -5)
linear_accel_min = 5.0
linear_accel_max = 10.0
radial_accel_min = 1.0
radial_accel_max = 1.0
color_ramp = SubResource("Gradient_706j5")

[node name="Smoke80" type="CPUParticles2D" parent="Smokes"]
position = Vector2(-16, 40)
emitting = false
amount = 100
lifetime = 3.0
texture = ExtResource("3_8iuek")
emission_shape = 1
emission_sphere_radius = 8.0
spread = 180.0
gravity = Vector2(2.08165e-12, -5)
linear_accel_min = 5.0
linear_accel_max = 10.0
radial_accel_min = 1.0
radial_accel_max = 1.0
color_ramp = SubResource("Gradient_706j5")

[node name="Death_Smoke" type="CPUParticles2D" parent="Smokes"]
position = Vector2(16, 56)
emitting = false
amount = 100
lifetime = 3.0
texture = ExtResource("3_8iuek")
emission_shape = 1
emission_sphere_radius = 8.0
spread = 180.0
gravity = Vector2(2.08165e-12, -5)
linear_accel_min = 5.0
linear_accel_max = 10.0
radial_accel_min = 1.0
radial_accel_max = 1.0
color_ramp = SubResource("Gradient_706j5")

[node name="fire_sparkles" type="Sprite2D" parent="."]
position = Vector2(1, 38)
scale = Vector2(0.33, 0.33)
texture = ExtResource("5_lewg6")
flip_v = true
vframes = 3
frame = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_lie06")
}

[node name="target_follow" type="Sprite2D" parent="."]
modulate = Color(0.984314, 0.309804, 0, 1)
z_index = 10
scale = Vector2(0.4, 0.4)
texture = ExtResource("7_2atxw")

[node name="anim_target_follow" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_s6waw")
}

[node name="fire_weapon" parent="." instance=ExtResource("8_lyv8w")]

[node name="explosion_death" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("13_x6e81")
bus = &"SFX"
